--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
     height: 600px;
     
     background-color: royalblue;
-    border: 2px solid black;
-    padding: 5px;
+    border: 3px solid black;
+    padding: 20px 20px 40px 20px;
 }
 
 .screen {
@@ -44,22 +44,26 @@ body {
     font-size: 32pt;
 }
 
+.btn.zero {
+    flex-basis: 186px;
+}
+
 .screen p {
     margin: 0px;
 }
 
-.btn:hover {
-    opacity: 80%;
+.num {
+    background-color: rgb(192, 192, 192);
 }
 
-.btn.num {
+.num:hover {
     background-color: gray;
 }
 
-.btn.operator {
+.operator {
     background-color: orange;
 }
 
-.btn.zero {
-    flex-basis: 186px;
+.operator:hover {
+    background-color: rgb(223, 145, 0);
 }
